# MessageScheduler

./: .gitignore  README.md  cleanup.sh  docker-compose.yml  experiment.env  messagescheduler  run.sh  stop.sh
.github/workflows/: docker-image.yml
MessageHandler/: Cargo.toml  Dockerfile  MessageHandler.py  common.py  config.py  constants.py  main.py  requirements.txt  run.sh  setup.sh
MessageHandler.old/: MessageHandler.py  common.py
MessageHandler/src/: common.rs  constants.rs  main.rs  messagehandler.rs  multiprocess.rs
Scheduler/: Dockerfile  JobScheduler.py  ScheduleServer.py  WorkerScheduler.py  common.py  config.py  constants.py  main.py  requirements.txt  run.sh
Worker/: Cargo.toml  Dockerfile  Worker.py  common.py  main.py  setup.sh
Worker.old/: constants.py
Worker/src/: common.rs  constants.rs  main.rs  multiprocess.rs  worker.rs
database-scheduler/: docker-compose.yml
database-scheduler/database-scheduler/: DatabaseScheduler.py  common.py  constants.py  main.py  requirements.txt  setup.sh
kafka/: docker-compose.yml  kafka-jmx-exporter.yml  prometheus.yml
kafka/kafka/: config.yml  prometheus.yml
message-database/: docker-compose.yml
message-database/messenger/: Collector.py  Messenger.py  common.py  constants.py  main.py  requirements.txt
messenger/: docker-compose.yml
messenger/messenger/: Collector.py  Messenger.py  main.py  (+3 more)
monitoring/: docker-compose.yml  kafka-jmx-exporter.yml  prometheus.yml
performance-analysis/: analyse.ipynb  common.py  config.yml  docker-compose.yml  main.py  messages.py  monitoring.py  requirements.txt
(+16 files in other folders)
