[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_json = "1.0.81"
uuid = {    version = "1.1.1",  features = ["v4"] }
libc = "0.2"
nix = "0.24.1"